<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editpolicy.EditPolicyFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carrier_label"
        android:text="@string/carrier_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carrier_text"
        android:text="@string/carrier_name"
        app:layout_constraintStart_toEndOf="@id/carrier_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agency_label"
        android:text="@string/agency_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carrier_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/agency"
        android:text="@string/agency_text"
        app:layout_constraintStart_toStartOf="@id/carrier_text"
        app:layout_constraintTop_toBottomOf="@id/carrier_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_holder_label"
        android:text="@string/policy_holder_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agency_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_holder"
        android:text="@string/policy_holder_text_view"
        app:layout_constraintStart_toStartOf="@id/agency"
        app:layout_constraintTop_toBottomOf="@id/agency_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_number_label"
        android:text="@string/policy_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/policy_holder_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_number"
        android:text="@string/policy_number_text_view"
        app:layout_constraintStart_toStartOf="@id/policy_holder"
        app:layout_constraintTop_toBottomOf="@id/policy_holder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_type_label"
        android:text="@string/policy_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/policy_number_label"/>
    
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/policy_type_spinner"
        android:labelFor="@id/policy_type_label"
        android:contentDescription="@string/spinner_content"
        app:layout_constraintStart_toStartOf="@id/carrier_text"
        app:layout_constraintTop_toBottomOf="@id/policy_number"/>

</androidx.constraintlayout.widget.ConstraintLayout>