<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gloveboxapp.androidchallenge.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_editPolicyFragment"
            app:destination="@id/editPolicyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_carriers"
        android:name="com.gloveboxapp.androidchallenge.ui.carriers.CarriersFragment"
        android:label="@string/title_carriers"
        tools:layout="@layout/fragment_carriers" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.gloveboxapp.androidchallenge.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/editPolicyFragment"
        android:name="com.gloveboxapp.androidchallenge.ui.editpolicy.EditPolicyFragment"
        android:label="@string/title_edit_policy"
        tools:layout="@layout/fragment_edit_policy">
        <argument
            android:name="currentPolicy"
            app:argType="com.gloveboxapp.androidchallenge.data.Policy" />
    </fragment>
</navigation>