<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:strokeColor="@color/policy_blue"
    android:layout_marginBottom="15dp"
    app:strokeWidth="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/policyTypeText"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/policy_type_textview"
            android:background="@color/policy_blue"
            android:textColor="@color/grey_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/policyHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_holder_text_view"
            android:padding="10dp"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/policyTypeText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/policyNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/policy_number_text_view"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/policyTypeText"
            app:layout_constraintTop_toBottomOf="@id/policyHolderName"/>


        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_text"
            android:textSize="15sp"
            android:textColor="@color/policy_blue"
            android:background="@drawable/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>